Tue Aug 21 02:24:37 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* link_list.c, link_list.h, som_alloc.c, som_alloc.h, som_array.c,
	som_array.h, som_command.c, som_elf.c, som_elf.h, som_final.c,
	som.h, som_init.c, som_main.c, som_os_swis.c, som_os_swis.h,
	som_register.c, som_register.h, som_runcom.c, som_startapp.h,
	som_swihandler.c, som_symlinks.c, som_symlinks.h, som_types.h,
	som_utilswis.c, som_utilswis.h, som_workspace.h: GNU indentation.

Sun Aug 19 12:20:02 2007  John Tytgat  <John.Tytgat@aaug.net>

	Using autotools to do the building.
	* configure.ac, Makefile.am: new.
	* Makefile: removed.

Fri Aug 17 23:08:28 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* som_register.c(som_deregister_client): set client's
	rt_workspace_CLIENT_STRUCT_PTR to 0 to indicate succesful
	deregistration.

Wed Aug 15 20:45:46 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* som_runcom.c(command_run): we can't return from this routine with an
	error after having called os_start_app() as otherwise the error "Not a
	heap block: FileSwitch FreeArea" is given instead (on RO 6.06).

Mon Aug 06 20:40:59 2007  Lee Noar  <leenoar@sky.com>

	* som_array.c(somarray_add_object(): Recycle object array elements
	there were previously used by an object that has since expired.

Mon Aug 06 19:35:48 2007  Lee Noar  <leenoar@sky.com>

	* som_register.c(som_deregister_client): Fix memory leak.

Sun Aug 05 13:48:40 2007  Lee Noar  <leenoar@sky.com>

	* somanager.cmhg, som_runcom.c: Exit gracefully if a shared library is
	run.

Tue Jul 17 19:44:48 2007  Lee Noar  <leenoar@sky.com>

	* elf_file.c, elf_file.h (elffile_load): Make bss zeroing optional.
	(elffile_from_memory): New function - fill in an elf_file structure
	from an ELF image already in memory.
	* som_runcom.c: Make dynamic loader file info more available (within
	this file) and generally simplify code.

Sat Jul 14 19:44:35 2007  Lee Noar  <leenoar@sky.com>

	* elf_file.c, elf_file.h(elffile_open): Work out and store the total